--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Api/Cooperchip.MedicalManagement.Api.csproj
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Api/Cooperchip.MedicalManagement.Api.csproj
@@ -194,9 +194,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Identity\UserManager.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -240,7 +240,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -324,6 +323,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Cooperchip.Common.Identity\Cooperchip.Common.Identity.csproj">
+      <Project>{977def1a-bf1f-4312-ad52-816c91bcff56}</Project>
+      <Name>Cooperchip.Common.Identity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cooperchip.MedicalManagement.Domain\Cooperchip.MedialManagement.Domain.csproj">
+      <Project>{be80dcff-9724-4eaf-9412-4c08c8b95021}</Project>
+      <Name>Cooperchip.MedialManagement.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cooperchip.MedicalManagement.Infra.Data\Cooperchip.MedicalManagement.Infra.Data.csproj">
+      <Project>{fe359534-1d9b-43a9-9d3f-796bce27bdd0}</Project>
+      <Name>Cooperchip.MedicalManagement.Infra.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
