--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Api/Web.config
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Api/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Cooperchip.MedicalManagement.Api-20180718051435.mdf;Initial Catalog=aspnet-Cooperchip.MedicalManagement.Api-20180718051435;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MMSysCodingCraft;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="MigracoesAutomaticas" value="false" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
