--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Web.config
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Web.config
@@ -12,8 +12,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MMData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-      
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CodingCraft.mdf;Initial Catalog=CodingCraft;Integrated Security=True" providerName="System.Data.SqlClient" />      
+
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MMSysCodingCraft;Integrated Security=True" providerName="System.Data.SqlClient" />
       
   </connectionStrings>
   <appSettings>
